syntax = "proto3";

package avsv1;

option go_package = "hyourproject/avsv1";

service TransactionService {
  rpc SubmitTransaction(SubmitTransactionRequest) returns (SubmitTransactionResponse) {}
}

message SubmitTransactionRequest {
  Transaction Transaction = 1;
}

message SubmitTransactionResponse {
  string Transaction_id = 1;
  string status = 2;
}

message Transaction {
  string id = 1;
  Params params = 2;
}

message Params {
  repeated bytes to = 1;
  repeated bytes from = 2;
  bytes data = 3;
  bytes value = 4;
}